crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_content_open_motion.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.content_attrs(&key(\"blog\")))"
---
data-ars-motion=from-end
data-ars-part=content
data-ars-scope=navigation-menu
data-ars-state=open
id=nav-content-s-626c6f67
