crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_indicator_hidden.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&closed_api.indicator_attrs())
---
aria-hidden=true
data-ars-part=indicator
data-ars-scope=navigation-menu
data-ars-state=hidden
