crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_item.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: "snapshot_attrs(&api.item_attrs(&key(\"docs\")))"
---
data-ars-part=item
data-ars-scope=navigation-menu
