crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_link_active.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.link_attrs(true))
---
aria-current=page
data-ars-active=true
data-ars-part=link
data-ars-scope=navigation-menu
