crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_root.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
aria-label=Main
data-ars-orientation=horizontal
data-ars-part=root
data-ars-scope=navigation-menu
dir=rtl
role=navigation
