crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_sub.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.sub_attrs())
---
data-ars-orientation=horizontal
data-ars-part=sub
data-ars-scope=navigation-menu
dir=ltr
