crates/ars-components/src/navigation/navigation_menu/snapshots/ars_components__navigation__navigation_menu__tests__navigation_menu_sub_indicator_visible.snap
---
source: crates/ars-components/src/navigation/navigation_menu/mod.rs
expression: snapshot_attrs(&api.sub_indicator_attrs())
---
aria-hidden=true
data-ars-part=sub-indicator
data-ars-scope=navigation-menu
data-ars-state=visible
